--- a/signup.html
+++ b/signup.html
@@ -27,7 +27,7 @@
             <input type="hidden" name="_subject" value="New Whisper Wall Signup">
             <input type="hidden" name="_autoresponse" value="Thank you for signing up to Whisper Wall! Your account is being prepared and you'll receive access soon.">
             <input type="hidden" name="_template" value="table">
-            <input type="hidden" name="_next" value="https://yourwebsite.com/thank-you.html">
+            <input type="hidden" name="_next" value=" https://sleepyhead-101.github.io/Whisper-Wall-101/singup.html">
             <input type="text" name="_honey" style="display:none">
             
             <div class="form-group">
@@ -117,4 +117,5 @@
 
     <script src="script/signup.js"></script>
 </body>
+
 </html>
