--- a/signup.html
+++ b/signup.html
@@ -115,7 +115,8 @@
         </div>
     </div>
 
-    <script src="script/signup.js"></script>
+    <script src="script/gghhgghh.js"></script>
 </body>
 
 </html>
+
