--- a/signup.html
+++ b/signup.html
@@ -6,6 +6,8 @@
     <title> Whisper wall Sign Up</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+      <link rel="stylesheet" href="styles/signup.css">
+
     </head>
 <body>
     <!-- Ghost elements -->
@@ -88,3 +90,4 @@
 
 </body>
 </html>
+
