--- a/signup.html
+++ b/signup.html
@@ -704,10 +704,11 @@
             <p>Account created successfully! Transporting you to the Whisper Wall...</p>
         </div>
         
-        <!-- Login Link -->
-        <div class="login-link">
-            <p>Already have an account? <a href="login.html" aria-label="Log in to your Whisper Wall account">Log in</a></p>
+      
         </div>
     </main>
+    <script src="script/gghhgghh.js"></script>
+
 </body>
 </html>
+
