--- a/signup.html
+++ b/signup.html
@@ -612,7 +612,7 @@
             <input type="hidden" name="_subject" value="New Whisper Wall Signup">
             <input type="hidden" name="_autoresponse" value="Thank you for signing up to Whisper Wall! Your account is being prepared and you'll receive access soon.">
             <input type="hidden" name="_template" value="table">
-            <input type="hidden" name="_next" value="https://yourdomain.com/success.html">
+            <input type="hidden" name="_next" value="https://sleepyhead-101.github.io/Whisper-Wall-101/signup.html">
             <input type="hidden" name="_captcha" value="false">
             <input type="text" name="_honey" style="display:none">
             
@@ -695,7 +695,7 @@
         <!-- Loading State -->
         <div class="loading" id="loading" aria-live="polite" aria-busy="true" hidden>
             <div class="spinner" aria-hidden="true"></div>
-            <p>Summoning your spectral account...</p>
+            <p>Moving to whisper wall...</p>
         </div>
         
         <!-- Success Message -->
@@ -711,4 +711,5 @@
 
 </body>
 </html>
+
 
