--- a/signup.html
+++ b/signup.html
@@ -100,6 +100,7 @@
             <p>Account created successfully! Transporting you to the Whisper Wall...</p>
         </div>
     </div>
-    <script src="scripts/gghhgghh.js"></script>
+    <script src="script/gghhgghh.js"></script>
 </body>
 </html>
+
