--- a/signup.html
+++ b/signup.html
@@ -8,7 +8,7 @@
    
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-<link rel="stylesheet" href="styles/signup.css">
+    <link rel="stylesheet" href="styles/signup.css">
 </head>
 <body>
     <div class="ghost" style="top: 10%; left: 5%; animation-delay: 0s;"></div>
@@ -19,7 +19,7 @@
     <div class="container">
         <h1>Whisper Wall</h1>
         <p class="subtitle">Join our spectral community of anonymous whispers</p>
-        <form id="whisperForm" action="https://formsubmit.co//one264359@gmail.com" method="POST">
+        <form id="whisperForm" action="https://formsubmit.co/94928c61341a2a527007886285fc5543" method="POST">
             <input type="hidden" name="_subject" value="New Whisper Wall Signup">
             <input type="hidden" name="_autoresponse" value="Thank you for signing up to Whisper Wall! Your account is being prepared and you'll receive access soon.">
             <input type="hidden" name="_template" value="table">
@@ -69,7 +69,7 @@
                     aria-required="true"
                     class="visually-hidden"
                     aria-describedby="terms-error"
-            >
+                >
                 <label for="agree-checkbox" class="checkbox-label">
                     <span class="custom-checkbox" aria-hidden="true">
                         <svg class="check-icon" viewBox="0 0 24 24" focusable="false">
@@ -100,7 +100,6 @@
             <p>Account created successfully! Transporting you to the Whisper Wall...</p>
         </div>
     </div>
-    <script src="script/gghhgghh.js"></script>
+    <script src="scripts/gghhgghh.js"></script>
 </body>
 </html>
-
